--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -1,45 +1,23 @@
 \section{Methodology}
 \label{sec:method}
-
-\subsection{Measuring Power Spectrum}
-Galaxy density contrast in pixel $i$ is defined as,
-\begin{align}\label{eq:delta}
-    \hat{\delta}_{i} &= \frac{\rho_{i}}{\hat{\overline{\rho}}} - 1 ,
-\end{align}
-where $\rho$ is the density of galaxies accounted for pixel area $f_{{\rm pix},i}$ and $\hat{\overline{\rho}}$ is the mean galaxy density estimated by,
-\begin{equation}\label{eq:nbar}
-\hat{\overline{\rho}} = \frac{\sum_{i}\rho_{i}f_{{\rm pix},i}}{\sum_{i}f_{{\rm pix},i}}.
-\end{equation}
-By definition, Eqs. \ref{eq:delta} and \ref{eq:nbar} ensure that the integral of the observed quantity over the footprint vanishes:
-\begin{align}\label{eq:ic}
-    \sum_{i} \hat{\delta}_{i}~f_{{\rm pix},i} = 0,
-\end{align}
-To estimate power spectrum, we expand the galaxy overdensity field in terms of Legendre polynomials,
-\begin{equation}
-        \hat{\delta}_{i} = \sum_{\ell=0}^{\ell_{{\rm max}}}\sum_{m=-\ell}^{\ell} a_{\ell m} Y_{\ell m}(\theta_{i}, \phi_{i}),
-\end{equation}
-where $\theta, \phi$ represent the polar and azimuthal angular coordinates of pixel \textit{i}, respectively. The cutoff at $\ell=\ell_{{\rm max}}$ assumes that modes with $\ell>\ell_{{\rm max}}$ do not contribute significantly to signal power. The  coefficients $a_{\ell m}$ are then obtained by integrating the density contrast field over the total number of non-empty pixels $N_{{\rm pix}}$ and using the orthogonality of Legendre polynomials:
-\begin{equation}
-        \hat{a}_{\ell m} = \frac{4\pi}{N_{{\rm pix}}} \sum_{i=1}^{N_{{\rm pix}}}  \hat{\delta}_{i}~f_{{\rm pix}, i}~ Y^{*}_{\ell m}(\theta_{i}, \phi_{i}),
-\end{equation}
-where $^{*}$ represents the complex conjugate. Then, the angular power spectrum estimator is defined as the variance of  $\hat{a}_{\ell m}$  coefficients:
-\begin{equation}\label{eq:pusedocell}
-        \hat{C}_{\ell} = \frac{1}{2\ell +1} \sum_{m=-\ell}^{\ell} \hat{a}_{\ell m} \hat{a}^{*}_{\ell m}.
-\end{equation}
-In order to extract $\hat{a}_{\ell m}$  and compute the angular power spectrum, $C_{\ell}$, we make use of the ANAFAST function from HEALPix \citep{gorski2005healpix} with the third order iteration of the quadrature to increase the accuracy\footnote{We refer the reader to \url{https://healpix.sourceforge.io/pdf/subroutines.pdf}, p. 104-105.}. Due to the survey geometry implicit in the summation over the non-empty pixels and explicit in $f_{\rm pix, i}$, our estimator does not return an unbiased estimate of power spectrum, and thus the same effect must be accounted in the modeling of power spectrum. Throughout this manuscript, we bin each mode with $\Delta\ell=2$ between $\ell=2$ and $20$ and $\Delta \ell=10$ from $\ell=20$ to $300$, while weighting each mode by $2\ell+1$.\\ 
-
-\subsection{Modeling Power Spectrum}
+This section describes the estimator for measuring the angular power spectrum and the methodology for modeling it in the presence of PNG. We also demonstrate how we correct for the effects of survey geometry and integral constraint in the modeling. The statistical tools for measuring the remaining systematic error are also presented. 
+ 
+ 
+ \subsection{Modeling Power Spectrum}
 The projected angular power spectrum of galaxies in the presence of redshift space distortions and local primordial non-Gaussianity is related to the 3D linear power spectrum $P(k)$ and shotnoise $N_{\rm shot}$ by \citep[see, e.g.,][]{slosar2008constraints},
 \begin{equation}\label{eq:cell}
     C_{\ell} = \frac{2}{\pi}\int_{0}^{\infty}\frac{dk}{k}k^{3}P(k)|\Delta_{\ell}(k)|^{2} + N_{\rm shot},
 \end{equation}
-where $N_{\rm shot}$ is the scale-independent shotnoise, and $\Delta_{\ell}(k) = \Delta^{\rm g}_{\ell}(k) + \Delta^{\rm RSD}_{\ell}(k) + \Delta^{\rm f_{NL}}_{\ell}(k)$ with,
+where $N_{\rm shot}$ is the scale-independent shotnoise, and $\Delta_{\ell}(k) = \Delta^{\rm g}_{\ell}(k) + \Delta^{\rm RSD}_{\ell}(k)$ with,
 \begin{align}
     \Delta^{\rm g}_{\ell}(k) &= \int \frac{dr}{r} r b(r) D(r) \frac{dN}{dr} j_{\ell}(kr),\\
-    \Delta^{\rm RSD}_{\ell}(k) &= - \int \frac{dr}{r} r f(r) D(r) \frac{dN}{dr} j^{\prime\prime}_{\ell}(kr),\\
-    \Delta^{\rm f_{NL}}_{\ell}(k) &= \fnl \frac{\alpha}{k^{2}T(k)} \int \frac{dr}{r} r [b(r)-p] \frac{dN}{dr} j_{\ell}(kr),
+    \Delta^{\rm RSD}_{\ell}(k) &= - \int \frac{dr}{r} r f(r) D(r) \frac{dN}{dr} j^{\prime\prime}_{\ell}(kr),
 \end{align}
-where $\alpha=3\delta_{c}\Omega_{M}(H_{0}/c)^{2}$, $b(r)$ is the linear bias, $dN/dr$ is the normalized redshift distribution of galaxies\footnote{$dN/dr = (dN/dz)*(dz/dr) \propto (dN/dz)*H(z)$}, $\delta_{c}$ is the critical density above which gravitational collapse occurs, $D(r)$ is the normalized growth factor such that $D(0)=1$, $f(r)$ is the growth rate, and $r$ is the comoving distance. The parameter $p$ is the response of the tracer to halo's gravitational field, e.g., $1$ for luminous red galaxies and $1.6$ for recent mergers. In order to overcome rapid oscillations in spherical Bessel functions, we employ the FFTLog\footnote{\href{https://github.com/xfangcosmo/FFTLog-and-beyond}{github.com/xfangcosmo/FFTLog-and-beyond}} algorithm and its extension as implemented in \mr{Fang et al (2020)} to compute the inner integrations over $d\ln r$.
+where $D(r)$ is the normalized growth factor such that $D(0)=1$, $f(r)$ is the growth rate, $r$ is the comoving distance, $dN/dr$ is the normalized redshift distribution of galaxies\footnote{$dN/dr = (dN/dz)*(dz/dr) \propto (dN/dz)*H(z)$}, $b(r)$ is the linear bias plus the scale-dependent shift due to PNG,
+\begin{equation}
+b(r) = b + 2 (b - p) \fnl \alpha \delta_{c} 
+\end{equation}
+$\delta_{c}=1.686$ is the critical density above which gravitational collapse occurs \mr{(Fillmore \& Goldreich 1984)}, . The parameter $p$ is the response of the tracer to halo's gravitational field, e.g., $1$ for luminous red galaxies and $1.6$ for recent mergers. In order to overcome rapid oscillations in spherical Bessel functions, we employ the FFTLog\footnote{\href{https://github.com/xfangcosmo/FFTLog-and-beyond}{github.com/xfangcosmo/FFTLog-and-beyond}} algorithm and its extension as implemented in \mr{Fang et al (2020)} to compute the inner integrations over $d\ln r$.
 
 For a galaxy survey that observes the sky partially, the measured power spectrum is convolved with the survey geometry. This means that the pseudo-power spectrum $\hat{C}_{\ell}$ obtained by the direct Spherical Harmonic Transforms of a partial sky map, differs from the full-sky angular spectrum $C_{\ell}$. However, their ensemble average is related by \citep{hivonmaster2002ApJ...567....2H} 
 
@@ -64,23 +42,60 @@ The integral of the galaxy density contrast $\delta$ on the footprint is bound t
      \hat{C}^{\rm model, IC}_{\ell} = \hat{C}^{\rm model}_{\ell} - \hat{C}^{\rm model}_{\ell=0} (\frac{\hat{C}^{\rm window}_{\ell}}{\hat{C}^{\rm window}_{\ell=0}})
 \end{equation}
 
-
-\begin{figure}
-\centering
-\includegraphics[width=0.45\textwidth]{hist_cl.pdf}
-\caption{Distribution of the first bin power spectrum for $\fnl=0$ and $100$ mocks.}
-\end{figure}
+Fig. \ref{fig:model_mock} shows the mean measured power spectrum of 1000 lognormal density fields (dashed) and best fit theory prediction. light and dark shades represent the 68\% error on the mean and one single realization, respectively. DESI footprint mask is applied to the mocks, and even though DESI covers around $40\%$ of the sky, but the window effect is affecting modes down to $\ell=200$. On the other hand, integral constraint only alters the power in the first two bins. 
 
 \begin{figure}
 \centering
 \includegraphics[width=0.45\textwidth]{model_mock.pdf}
-\caption{Mean power spectrum of 1000 mocks with $\fnl=0$ and best fit theoretical prediction after accounting for various theoretical systematic effects.}
+\caption{Mean power spectrum of 1000 mocks with $\fnl=0$ and best fit theoretical prediction after accounting for various theoretical systematic effects.}\label{fig:model_mock}
 \end{figure}
 
+
+\subsection{Measuring Power Spectrum}
+The quantity that carries cosmological information is galaxy density contrast, $\delta$, which in pixel $i$ is constructed as,
+\begin{align}\label{eq:delta}
+    \hat{\delta}_{i} &= \frac{\rho_{i}}{\hat{\overline{\rho}}} - 1 ,
+\end{align}
+where $\rho$ is the density of galaxies accounted for pixel area $f_{{\rm pix},i}$, which is determined by uniformly distributed random galaxies over footprint, and $\hat{\overline{\rho}}$ is the mean galaxy density directly estimated from the data,
+\begin{equation}\label{eq:nbar}
+\hat{\overline{\rho}} = \frac{\sum_{i}\rho_{i}f_{{\rm pix},i}}{\sum_{i}f_{{\rm pix},i}}.
+\end{equation}
+By definition, Eqs. \ref{eq:delta} and \ref{eq:nbar} ensure that the integral of the observed quantity over the footprint vanishes:
+\begin{align}\label{eq:ic}
+    \sum_{i} \hat{\delta}_{i}~f_{{\rm pix},i} = 0,
+\end{align}
+and this constraint causes an effect commonly referred to as \textit{integral constraint}, which needs to be accounted for in the model. To estimate power spectrum, the galaxy density contrast is expanded in terms of Legendre polynomials,
+\begin{equation}
+        \hat{\delta}_{i} = \sum_{\ell=0}^{\ell_{{\rm max}}}\sum_{m=-\ell}^{\ell} a_{\ell m} Y_{\ell m}(\theta_{i}, \phi_{i}),
+\end{equation}
+where $\theta, \phi$ represent the polar and azimuthal angular coordinates of pixel \textit{i} center, respectively. The cutoff at $\ell=\ell_{{\rm max}}$ assumes that modes with $\ell>\ell_{{\rm max}}$ do not contribute significantly to signal power. The  coefficients $a_{\ell m}$ are then obtained by integrating the density contrast field over the total number of non-empty pixels $N_{{\rm pix}}$ and using the orthogonality of Legendre polynomials:
+\begin{equation}
+        \hat{a}_{\ell m} = \frac{4\pi}{N_{{\rm pix}}} \sum_{i=1}^{N_{{\rm pix}}}  \hat{\delta}_{i}~f_{{\rm pix}, i}~ Y^{*}_{\ell m}(\theta_{i}, \phi_{i}),
+\end{equation}
+where $^{*}$ represents the complex conjugate. Then, the angular power spectrum estimator is defined as the variance of  $\hat{a}_{\ell m}$  coefficients:
+\begin{equation}\label{eq:pusedocell}
+        \hat{C}_{\ell} = \frac{1}{2\ell +1} \sum_{m=-\ell}^{\ell} \hat{a}_{\ell m} \hat{a}^{*}_{\ell m}.
+\end{equation}
+In order to extract $\hat{a}_{\ell m}$  and compute the angular power spectrum, $C_{\ell}$, the function \texttt{ANAFAST} is called from \textsc{HEALPix} \citep{gorski2005healpix} with the third order iteration of the quadrature to increase the accuracy\footnote{We refer the reader to \url{https://healpix.sourceforge.io/pdf/subroutines.pdf}, p. 104-105.}. Due to the survey geometry implicit in the summation over the non-empty pixels and explicit in $f_{\rm pix, i}$, our estimator does not return an unbiased estimate of power spectrum, as different modes are no longer independent. Therefore, the same effect must be accounted in the modeling of power spectrum.
+
+\begin{figure}
+\centering
+\includegraphics[width=0.45\textwidth]{hist_cl.pdf}
+\caption{Distribution of the first bin power spectrum for $\fnl=0$ and $100$ mocks.}\label{fig:histcell}
+\end{figure}
+
+
+\subsection{Parameter estimation}
+Signature of local PNG is unique and cannot be reproduced with other cosmological parameters. We allow three parameters to vary; $\fnl$, shotnoise, and bias at $z=0$. Throughout this manuscript, we bin each mode with $\Delta\ell=2$ between $\ell=2$ and $20$ and $\Delta \ell=10$ from $\ell=20$ to $300$, while weighting each mode by $2\ell+1$. We also find that the distribution of power spectrum at the lowest bin, $2\leq \ell < 12$,  is not Gaussian and its standard deviation varies significantly from mocks with $\fnl=0$ to $76.9$ (see, Fig. \ref{fig:histcell}). Therefore, we attempt to fit $\log C_{\ell}$ to make our constraints insensitive to the choice of covariance matrix. The parameter $\fnl$ is constrained by maximizing a posterior defined as,
+\begin{equation}
+-2\ln\mathcal{L} = (\log C(\Theta)-\log \hat{C})^{\dagger} \mathbb{C}^{-1} (\log C(\Theta)-\log \hat{C}) + \chi^{2}_{\rm priors},
+\end{equation}
+where $\Theta$ represents the parameters, $\fnl$, bias at $z=0$, and shotnoise, all of which are associated with a flat prior, $\chi^{2}_{\rm priors}$; $C(\Theta)$ is the (binned) theoretical power spectrum including the effects for survey geometry and integral constraint; $\hat{C}$ is the (binned) measured power spectrum; and $\mathbb{C}$ is the covariance matrix constructed from simulations. 
 
 \subsection{Characterization of residual systematic error}
 \label{ssec:characterization}
 We use the diagnostic tests presented in \mr{Rezaie et al 2021} based on cross power spectrum between galaxy density field and imaging maps and mean density contrast as a function of imaging properties to quantify the significance of imaging systematic effects. 
+
 
 \subsubsection{Cross Spectrum}
 Taking $C^{g,x}_{\ell}$ as the cross power spectrum between galaxy density contrast field and imaging map, one can normalize this quantity by auto power spectrum of imaging map itself:
@@ -91,11 +106,13 @@ and then construct a vector from cross spectra against all other imaging maps:
 \begin{equation}
 \hat{C}_{X, \ell} = [\hat{C}_{x_{1}, \ell}, \hat{C}_{x_{2}, \ell}, \hat{C}_{x_{3}, \ell}, ..., \hat{C}_{x_{9}, \ell}].
 \end{equation}
-We bin the $C_{X}$ measurements with $\ell$ edges defined at $2,  10,  18,  26,  40,  60,  80,~{\rm and}~100$. The mean and standard deviation of $\hat{C}_{X, \ell}$ for 1000 mocks with and without $\fnl$ are shown in Fig. \ref{fig:clxmock}.  Finally, cross power spectrum $\chi^{2}$ can be defined as,
+Finally, cross power spectrum $\chi^{2}$ can be defined as,
 \begin{equation}
 \chi^{2} = C^{T}_{X, \ell} \mathbb{C}_{X}^{-1} C_{X, \ell},
 \end{equation}
-where covariance matrix $\mathbb{C}_{X} = < C_{X, \ell} C_{X, \ell'} >$ is constructed from mocks without systematic effects. This statistics is measured for every mock realization with the leave-one-out technique to construct a histogram, which is then compared to the $\chi^{2}$ value observed from the DR9. 
+where covariance matrix $\mathbb{C}_{X} = < C_{X, \ell} C_{X, \ell'} >$ is constructed from mocks without systematic effects. This statistics is measured for every mock realization with the leave-one-out technique to construct a histogram, which is then compared to the $\chi^{2}$ value observed from the DR9.  Fig. \ref{fig:clxmock} (top) shows the measured $C_{X}$ the DR9 sample before and after applying various imaging weights, relative to that of the mocks with $\fnl=0$. The dispersions of mocks with and without PNG are shown with the shade regions for comparison. We bin the $C_{X}$ measurements from $\ell=2$ to $20$ with $\Delta\ell=2$. The mean and standard deviation of $\hat{C}_{X, \ell}$ for 1000 mocks with and without $\fnl$ are shown in Fig. \ref{fig:clxmock}.  Extinction and stellar density have the highest cross power spectrum, and then depth in the z band. After applying the first version of weights with linear conservative I which includes extinction and depth-z, the cross power increases against psftsize in the r band. This indicates that only two maps are not sufficient to null out all of the cross correlations. With linear model there is residual power against extinction, depth-z, and psfsize-z; therefore, we apply weights based on a nonlinear model to account for more complex systematic effects. 
+
+Fig. \ref{fig:chi2test} (top) shows the histogram of cross spectrum $\chi^{2}$ from mocks with and without $\fnl$. Comparing with the data, the residual is 20014.8 before correction, and after applying the first set of weights, it reduces to 375.1 with p-value \mr{XXX}. Adding psfsize-z, the linear model reduces the error dow to 195.9 (\mr{p-value = XXX}). Although using all maps gives the lowest error i.e., 129.2, but it could potentially lead to over-fitting true clustering given how correlated the imaging maps are (see, Fig. \ref{fig:pcc}). On the other hand, the nonlinear method with three maps yields a $\chi^{2}$ value of 79.3 and p-value of XXX, and adding the stellar density map reduces the error to 70.9 (p-value=XXX). This test clearly shows that a nonlinear approach is desired to get a null test. We further test the stability of our results by extending the highest mode from $\ell=20$ to $100$, or fluctuations over scales as small as $1.8$ degrees (see, Fig. \ref{fig:chi2cellextend}). The solid line shows how the median of 1000 mocks changes as the highest $\ell$ increases from $20$ to $100$. The red circles show the chi2 for the linear approach with three maps and the blue crosses show the chi2 for the nonlinear approach with three maps.
 
 \subsubsection{Mean Density}
 As an alternative test, we calculate the histogram of the density contrast field relative to each imaging map.
@@ -110,28 +127,30 @@ and the total residual error as,
 \begin{equation}
 \chi^{2} = \delta_{X}^{T} \mathbb{C_{\delta}}^{-1} \delta_{X},
 \end{equation}
-where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from mocks without systematic effects. Fig. \ref{fig:clxmock} shows the cross power spectrum and mean density contrast for the DR9 LRG sample. The shades represent the $1\sigma$ level fluctuations observed in 1000 clean mocks with $\fnl=0$ and $100$.
+where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from mocks without systematic effects. Fig. \ref{fig:clxmock} (bottom) shows the mean density contrast for the DR9 LRG sample. The shades represent the $1\sigma$ level fluctuations observed in 1000 clean mocks with $\fnl=0$ and $100$. Before treatment (solid) shows strong correlation around $10\%$ against depth in the z band which is consistent with the cross power spectrum. Beside that, there are strong positive trends against extinction and stellar density at about $5-6\%$. The linear model is able to mitigate most of the systematic effects with only the extinction and depth-z maps as input, however a new trend appears against psfsize-r which is indicative of psfsize dependence in the sample. This finding is in agreement with the cross power spectrum. Even after applying the linear weights there is some residual against depth-z at around $2\%$, which indicates the systematic effects might be more complex than what can be removed using a linear model. Nonlinear model with three maps (or four maps including the stellar density) is capable of reducing the fluctuations below $2\%$. 
+
+Fig. \ref{fig:chi2test} (bottom) shows the mean density $\chi^{2}$ observed in the mocks vs DR9 sample before and after applying imaging weights. Linear weights with two maps reduce the chi-2 value from 679.8 (before) to 178.8. The p-value is indicative of remaining systematic effects. Adding psfsize-r does not help much with the p-value even though it reduces the chi-2 to 130. Using all maps with the linear model gives a more reasonable value however it leaves the analysis susceptible to over-fitting true clustering signal. With nonlinear approach two maps as input, the chi-2 is reasonable 74.3 with p-value XXX, and adding the stellar map does not change the p-value much, indicating the trend against stellar density can be explained with the extinction to a great extend. 
+
 
 \begin{figure*}
 \centering
 \includegraphics[width=0.95\textwidth]{clx_mocks.pdf}
 \includegraphics[width=0.95\textwidth]{nbar_mocks.pdf}
-\caption{Residual systematic fluctuations of DR9 LRGs against imaging maps. Left: cross spectrum. Right: mean density contrast. Shades represent $1\sigma$ dispersion of 1000 clean mocks with and without $\fnl$.}\label{fig:clxmock}
+\caption{Residual systematic fluctuations of DR9 LRGs against imaging maps. Left: cross spectrum. Right: mean density contrast. Shades represent $1\sigma$ dispersion of 1000 clean mocks with and without $\fnl$. Solid curve shows the data before applying any weights, while the red dashed shows the data with linear all maps, and blue dot-dashed shows the data with linear cons I, and orange dotted curve shows linear cons II. The nonlinear models are shown with blue dashed and red dot-dashed.}\label{fig:clxmock}
+\end{figure*}
+
+
+\begin{figure*}
+\centering
+\includegraphics[width=0.45\textwidth]{chi2test.pdf}
+\includegraphics[width=0.45\textwidth]{chi2test2.pdf}
+\caption{Left: Cross power spectrum $\chi^{2}$ diagnostic. Right: Mean density contrast diagnostic. The values observed in DR9 before and after linear and nonlinear treatments are quoted and the histograms are constructed from 1000 realizations of clean mocks with $\fnl=0$ and $76.92$.}\label{fig:chi2test}
 \end{figure*}
 
 \begin{figure}
 \centering
-\includegraphics[width=0.45\textwidth]{chi2test.pdf}
-\includegraphics[width=0.45\textwidth]{chi2test2.pdf}
-\caption{Left: Cross power spectrum $\chi^{2}$ diagnostic. Right: Mean density contrast diagnostic. The values observed in DR9 before and after linear and nonlinear treatments are quoted and the histograms are constructed from 1000 realizations of clean mocks with $\fnl=0$ and $100$.}
+\includegraphics[width=0.45\textwidth]{chi2lmax.pdf}
+\caption{Cross Spectrum $\chi^{2}$ as a function of the highest mode $\ell_{\rm max}$. The lowest mode is $\ell_{\rm min}=2$.}\label{fig:chi2cellextend}
 \end{figure}
-
-
-\subsection{Parameter estimation}
-We constrain $\fnl$ by maximizing a posterior defined as,
-\begin{equation}
--2\ln\mathcal{L} = (C(\Theta)-\hat{C})^{\dagger} \mathbb{C}^{-1} (C(\Theta)-\hat{C}) + \chi^{2}_{\rm priors},
-\end{equation}
-where $\Theta$ represents the parameters, $\fnl$, bias at $z=0$, and shotnoise, all of which were associated with a flat prior, $\chi^{2}_{\rm priors}$; $C(\Theta)$ is the (binned) theoretical power spectrum including the effects for survey geometry and integral constraint; $\hat{C}$ is the (binned) measured power spectrum; and $\mathbb{C}$ is the covariance matrix constructed from simulations. 
 
 \clearpage
